syntax = "proto3";

package config;

option go_package = ".;pb";

import "google/protobuf/struct.proto";

message ConfigMeta {
  string configMapName  = 1;
  string configMapNamespace = 2;
}
message GetWorkerConfigRequest {
  ConfigMeta configMeta = 1;
}
message UpdateWorkerConfigRequest {
  ConfigMeta configMeta = 1;
  Config config = 2;
}

message Config {
  google.protobuf.Struct Sources = 1;
  google.protobuf.Struct Transforms = 2;
  google.protobuf.Struct Sinks = 3;
}

message WorkerConfigResponse  {
    google.protobuf.Struct config = 1;
}
